--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
             </label>
 
             <label for="dom2" class="form__label">
-              <input type="radio" name="Недвижимость" id="dom2" value="Апартаменты" required />
+              <input type="radio" name="Недвижимость" id="dom2" value="Таунхаус" required />
               <span>Таунхаус</span>
             </label>
 
             <label for="dom3" class="form__label">
-              <input type="radio" name="Недвижимость" id="dom3" value="Дом" required />
+              <input type="radio" name="Недвижимость" id="dom3" value="Вилла" required />
               <span>Вилла</span>
             </label>
           </fieldset>
@@ -65,22 +65,22 @@
 
           <fieldset class="fieldset">
             <label for="room1" class="form__label">
-              <input type="radio" name="Спальня" id="room1" value="1" required />
+              <input type="radio" name="Спальня" id="room1" value="Студия" required />
               <span>Студия</span>
             </label>
 
             <label for="room2" class="form__label">
-              <input type="radio" name="Спальня" id="room2" value="2" required />
+              <input type="radio" name="Спальня" id="room2" value="1 спальная" required />
               <span>1 спальня</span>
             </label>
 
             <label for="room3" class="form__label">
-              <input type="radio" name="Спальня" id="room3" value="3" required />
+              <input type="radio" name="Спальня" id="room3" value="2 спальни" required />
               <span>2 спальни</span>
             </label>
 
             <label for="room4" class="form__label">
-              <input type="radio" name="Спальня" id="room4" value="4+" required />
+              <input type="radio" name="Спальня" id="room4" value="3+ спален" required />
               <span>3 и более спален</span>
             </label>
           </fieldset>
@@ -92,22 +92,22 @@
 
           <fieldset class="fieldset">
             <label for="mon1" class="form__label">
-              <input type="radio" name="Бюджет" id="mon1" value="€100 000" required />
+              <input type="radio" name="Бюджет" id="mon1" value="до €200 000" required />
               <span>до $200 000</span>
             </label>
 
             <label for="mon2" class="form__label">
-              <input type="radio" name="Бюджет" id="mon2" value="€200 000" required />
+              <input type="radio" name="Бюджет" id="mon2" value="до €300 000" required />
               <span>до $300 000</span>
             </label>
 
             <label for="mon3" class="form__label">
-              <input type="radio" name="Бюджет" id="mon3" value="€500 000" required />
+              <input type="radio" name="Бюджет" id="mon3" value="до €500 000" required />
               <span>до $500 000</span>
             </label>
 
             <label for="mon4" class="form__label">
-              <input type="radio" name="Бюджет" id="mon4" value="€500 000 +" required />
+              <input type="radio" name="Бюджет" id="mon4" value="более €500 000" required />
               <span>более $500 000 </span>
             </label>
           </fieldset>
