--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
               </div>
             </div>
             <div id="formDisplay" style="margin-top: 20px; display: none;">
-              <input placeholder="Введите Ваше имя" name="fio" id="fio" type="text">
+              <input placeholder="Введите Ваше имя" name="name" id="name" type="text">
               <div id="whatsapp_phone" style="margin-top: 15px;"><input id="phone" name="whatsapp" type="tel" value="" /></div>
               
               <div id="phone_phone" style="margin-top: 15px;"><input id="phone1" name="phone" type="tel" value="" /></div>
