--- a/thanks.html
+++ b/thanks.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Недвижимость в Дубае</title>
+    <title>Real estate in Dubai</title>
     <link rel="stylesheet" href="css/main.css" />
     <script src="https://code.jquery.com/jquery-2.2.4.min.js" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;700&display=swap" rel="stylesheet" />
@@ -21,22 +21,22 @@
             <div id="form__success" class="form-success" style="display: flex;">
 
                 <div class="form-success__content">
-                    <h5>Спасибо за заявку</h5>
+                    <h5>Thanks for your application</h5>
                     <p>
-                        Мы свяжемся с вами в ближайшее рабочее время. 
+                        We will contact you as soon as possible during business hours.
                     </p>
                     <p>
-                        Пожалуйста, проверьте Ваши данные:<br>
-                        Имя: <span style="color: #d34085;" id="namePlaceholder"></span><br>
-                        Телефон: <span style="color: #d34085;" id="telPlaceholder"></span>
+                        Please check your details:<br>
+                        Name: <span style="color: #d34085;" id="namePlaceholder"></span><br>
+                        Telephone: <span style="color: #d34085;" id="telPlaceholder"></span>
                     </p>
                     <p>
-                        Если данные введеные неверно, Вы можете отправить заявку снова, нажава по кнопке ниже.
+                        If the data entered is incorrect, you can submit your application again by clicking on the button below.
                     </p>
                 </div>
             </div>
             <br>
-            <button style="width: 300px;" id="header__btn" class="header__btn btn">Повторить заявку</button>
+            <button style="width: 300px;" id="header__btn" class="header__btn btn">Repeat application</button>
         </div>
     </header>
 
