--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Real estate in Dubai</title>
+  <title>Недвижимость в Дубае</title>
   <link rel="stylesheet" href="build/css/intlTelInput.css" />
   <link rel="stylesheet" href="build/css/demo.css" />
   <link rel="stylesheet" href="css/main.css" />
@@ -26,12 +26,12 @@
     </picture>
     <div class="header__content">
       <h1 class="header__title">
-        We will select real estate in Dubai according to your criteria
+        Подберем недвижимость в Дубае под ваши критерии
       </h1>
       <p>
-        Answer 3 questions and get a list of options that suit you
+        Ответьте на 3 вопроса и получите список подходящих для вас вариантов
       </p>
-      <button id="header__btn" class="header__btn btn">Pick up</button>
+      <button id="header__btn" class="header__btn btn">Подобрать</button>
     </div>
   </header>
 
@@ -45,92 +45,92 @@
 
         <div class="form__screen form__main">
           <h3 class="form__title">
-            What type of real estate in Dubai are you interested in?
+            Какой вид недвижимости в Дубае вас интересует?
           </h3>
 
           <fieldset class="fieldset">
             <label for="dom1" class="form__label">
               <input type="radio" name="Недвижимость" id="dom1" value="Квартира" required />
-              <span>Apartment</span>
+              <span>Квартира</span>
             </label>
 
             <label for="dom2" class="form__label">
               <input type="radio" name="Недвижимость" id="dom2" value="Таунхаус" required />
-              <span>Townhouse</span>
+              <span>Таунхаус</span>
             </label>
 
             <label for="dom3" class="form__label">
               <input type="radio" name="Недвижимость" id="dom3" value="Вилла" required />
-              <span>Villa</span>
+              <span>Вилла</span>
             </label>
           </fieldset>
         </div>
 
         <div class="form__screen form__second visible">
-          <h3 class="form__title">How many bedrooms are you interested in?</h3>
+          <h3 class="form__title">Какое количество спален вас интересует?</h3>
 
           <fieldset class="fieldset">
             <label for="room1" class="form__label">
               <input type="radio" name="Спальня" id="room1" value="Студия" required />
-              <span>Studio</span>
+              <span>Студия</span>
             </label>
 
             <label for="room2" class="form__label">
               <input type="radio" name="Спальня" id="room2" value="1 спальная" required />
-              <span>1 bedroom</span>
+              <span>1 спальня</span>
             </label>
 
             <label for="room3" class="form__label">
               <input type="radio" name="Спальня" id="room3" value="2 спальни" required />
-              <span>2 bedrooms</span>
+              <span>2 спальни</span>
             </label>
 
             <label for="room4" class="form__label">
               <input type="radio" name="Спальня" id="room4" value="3+ спален" required />
-              <span>3 or more bedrooms</span>
+              <span>3 и более спален</span>
             </label>
           </fieldset>
-          <button type="button" class="form__second-btn btn">Back</button>
+          <button type="button" class="form__second-btn btn">Назад</button>
         </div>
 
         <div class="form__screen form__third visible">
-          <h3 class="form__title">Please indicate your approximate purchase budget</h3>
+          <h3 class="form__title">Укажите ваш примерный бюджет на покупку</h3>
 
           <fieldset class="fieldset">
             <label for="mon1" class="form__label">
               <input type="radio" name="Бюджет" id="mon1" value="до €200 000" required />
-              <span>up to $200,000</span>
+              <span>до $200 000</span>
             </label>
 
             <label for="mon2" class="form__label">
               <input type="radio" name="Бюджет" id="mon2" value="до €300 000" required />
-              <span>up to $300,000</span>
+              <span>до $300 000</span>
             </label>
 
             <label for="mon3" class="form__label">
               <input type="radio" name="Бюджет" id="mon3" value="до €500 000" required />
-              <span>up to $500,000</span>
+              <span>до $500 000</span>
             </label>
 
             <label for="mon4" class="form__label">
               <input type="radio" name="Бюджет" id="mon4" value="более €500 000" required />
-              <span>more than $500,000 </span>
+              <span>более $500 000 </span>
             </label>
           </fieldset>
-          <button type="button" class="form__third-btn btn">Back</button>
+          <button type="button" class="form__third-btn btn">Назад</button>
         </div>
 
         <div class="form__screen form__last visible">
           <h3 class="form__title">
-            After submitting the form you will receive a personal selection
-            Properties in Dubai
+            После отправки формы вы получите персональную подборку
+            Недвижимости в Дубае
           </h3>
           <p class="social__descr">
-            There are great deals with current promotions and discounts *
+            Есть выгодные предложения с действующими акциями и скидками *
           </p>
 
           <div class="social__wrap">
-            <h4 class="social__subtitle">Where to send a selection</h4>
+            <h4 class="social__subtitle">Куда прислать подборку</h4>
             <div class="social__icons-wrap">
               <div id="item__whatsapp" class="social__item">
                 <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -180,11 +180,11 @@
                     <g></g>
                   </g>
                 </svg>
-                <span>Telephone</span>
+                <span>Телефон</span>
               </div>
             </div>
             <div id="formDisplay" style="margin-top: 20px; display: none;">
-              <input placeholder="Enter your name" name="name" id="name" type="text" required minlength="3">
+              <input placeholder="Введите Ваше имя" name="name" id="name" type="text">
               <div id="whatsapp_phone" style="margin-top: 15px;"><input id="phone" name="whatsapp" type="tel"
                   value="" /></div>
 
@@ -197,7 +197,7 @@
               <input type="hidden" name="phone_code" id="phone_code" value="" />
 
               <button id="btn_ready" class="btn form__btn" type="submit">
-                Done
+                Готово
               </button>
             </div>
 
@@ -256,16 +256,16 @@
           </div>
 
           <div class="manager__info">
-            <h4 class="manager__name">Anastasia</h4>
+            <h4 class="manager__name">Анастасия</h4>
             <div class="manager__profile">
-              Real Estate Expert in Dubai
+              Эксперт по недвижимости в Дубае
             </div>
           </div>
         </div>
         <p class="form__descr">
-          We will analyze all available options and provide you with
-          up-to-date information. There are more than 10,000 objects in our database
-          real estate.
+          Мы проанализируем все имеющиеся варианты и предоставим Вам
+          актуальную информацию. В нашей базе более 10 000 объектов
+          недвижимости.
         </p>
       </div>
     </div>
