--- a/index.html
+++ b/index.html
@@ -185,10 +185,10 @@
             </div>
             <div id="formDisplay" style="margin-top: 20px; display: none;">
               <input placeholder="Введите Ваше имя" required minlength="3" name="name" id="name" type="text">
-              <div id="whatsapp_phone" style="margin-top: 15px;"><input id="phone" required minlength="5" name="whatsapp" type="tel"
+              <div id="whatsapp_phone" style="margin-top: 15px;"><input id="phone"  minlength="5" name="whatsapp" type="tel"
                   value="" /></div>
 
-              <div id="phone_phone" style="margin-top: 15px;"><input id="phone1" required minlength="5" name="phone" type="tel" value="" />
+              <div id="phone_phone" style="margin-top: 15px;"><input id="phone1"  minlength="5" name="phone" type="tel" value="" />
               </div>
 
               <input type="hidden" name="sub1" id="sub1" value="" />
